some changes on trip endpoints
