# src/seeders/20220309203704-tripRequest-seed.js
@@ -9,7 +9,6 @@ module.exports = {
       tripReason: 'this is trip for research purpose',
       departDate: '2022-9-03',
       returnDate: '2022-10-03',
-      travelId: 1,
       accomodationId: 1,
       createdAt: new Date(),
       updatedAt: new Date(),
@@ -22,7 +21,6 @@ module.exports = {
       tripReason: 'this is trip for research purpose',
       departDate: '2022-10-03',
       returnDate: '2022-12-03',
-      travelId: 1,
       accomodationId: 1,
       createdAt: new Date(),
       updatedAt: new Date(),
