# swagger.json
@@ -68,45 +68,13 @@
                 }
             }
         },
-
-        "/api/v1/trip/requests/all/{managerId}": {
-            "get": {
-                "tags": ["Trip Request"],
-                "summary": "This endPoint will retrieve the requests sent by requester to manager",
-                "description": "This endPoint will retrieve the requests sent by requester,either pending,rejected or approved",
-                "operationId": "requestToManager",
-                "parameters": [{
-                    "name": "managerId",
-                    "in": "path",
-                    "description": "Manager id",
-                    "required": true,
-                    "type": "integer"
-                }],
-
-                "responses": {
-                    "200": {
-                        "description": "Successfully retrieved"
-                    },
-                    "404": {
-                        "description": "NOT FOUND"
-                    }
-                }
-            }
-        },
-
-        "/api/v1/trip/request/{userId}": {
+        "/api/v1/trip/request/": {
             "post": {
                 "tags": ["Trip Request"],
                 "summary": "This is the endpoint to request a trip by user",
                 "description": "This is the endpoint to request trip by user",
-                "operationId": "Add tripRequest",
-                "parameters": [{
-                    "name": "userId",
-                    "in": "path",
-                    "description": "Trip request user id",
-                    "required": true,
-                    "type": "integer"
-                }, {
+                "operationId": "Addt tripRequest",
+                "parameters": [ {
                     "name": "body",
                     "in": "body",
                     "description": "Trip request",
@@ -129,19 +97,12 @@
             }
         },
 
-        "/api/v1/trip/allrequest/{userId}": {
+        "/api/v1/trip/allrequests/": {
             "get": {
                 "tags": ["Trip Request"],
-                "summary": "This endPoint will retrieve the requests sent by requester",
+                "summary": "This endPoint will retrieve the requests sent by requester pending,rejected or approved",
                 "description": "This endPoint will retrieve the requests sent by requester,either pending,rejected or approved",
                 "operationId": "getAllRequest",
-                "parameters": [{
-                    "name": "userId",
-                    "in": "path",
-                    "description": "Trip request user id",
-                    "required": true,
-                    "type": "integer"
-                }],
 
                 "responses": {
                     "200": {
@@ -157,19 +118,12 @@
             }
         },
 
-        "/api/v1/trip/requests/{userId}": {
+        "/api/v1/trip/requests/": {
             "get": {
                 "tags": ["Trip Request"],
                 "summary": "This endPoint will retrieve the pending requests sent by requester",
                 "description": "This endPoint will retrieve the pending requests sent by requester",
                 "operationId": "getRequest",
-                "parameters": [{
-                    "name": "userId",
-                    "in": "path",
-                    "description": "Trip request user id",
-                    "required": true,
-                    "type": "integer"
-                }],
 
                 "responses": {
                     "200": {
@@ -186,20 +140,12 @@
         },
 
 
-        "/api/v1/trip/requests/all/{managerId}": {
+        "/api/v1/trip/requests/all": {
             "get": {
                 "tags": ["Trip Request"],
                 "summary": "This endPoint will retrieve the requests sent to manager",
                 "description": "This endPoint will retrieve the requests sent by requesters to manager",
                 "operationId": "get requests sent to manager",
-                "parameters": [{
-                    "name": "managerId",
-                    "in": "path",
-                    "description": "Trip request manager id",
-                    "required": true,
-                    "type": "integer"
-                }],
-
                 "responses": {
                     "200": {
                         "description": "Successfully retrieved"
@@ -214,19 +160,13 @@
             }
         },
 
-        "/api/v1/trip/request/{userId}/{id}": {
+        "/api/v1/trip/requests/{id}": {
             "delete": {
                 "tags": ["Trip Request"],
                 "summary": "This end Point will delete the pending request sent by requester",
                 "description": "This end Point will delete the pending request sent by requester",
                 "operationId": "delete Request",
-                "parameters": [{
-                        "name": "userId",
-                        "in": "path",
-                        "description": "Trip request user id",
-                        "required": true,
-                        "type": "integer"
-                    },
+                "parameters": [
                     {
                         "name": "id",
                         "in": "path",
@@ -254,12 +194,7 @@
                 "description": " update request with pending status",
                 "operationId": "updateRequest",
                 "produces": ["application/json"],
-                "parameters": [{
-                        "name": "userId",
-                        "in": "path",
-                        "type": "integer",
-                        "required": true
-                    }, {
+                "parameters": [ {
                         "name": "id",
                         "in": "path",
                         "type": "integer"
@@ -311,13 +246,23 @@
                 }
             }
         },
+        "Login": {
+            "type": "object",
+            "in":"body",
+            "required": ["email", "password"],
+            "properties": {
+                  "email": {
+                      "type": "string"
+                  },
+                  "password": {
+                      "type": "string"
+                  }
+              }
+          },
         "trip": {
             "type": "object",
             "in": "body",
             "properties": {
-                "managerId": {
-                    "type": "integer"
-                },
                 "departLocation": {
                     "type": "integer"
                 },
@@ -333,15 +278,10 @@
                 "returnDate": {
                     "type": "string"
                 },
-                "travelId": {
-                    "type": "integer"
-                },
                 "accomodationId": {
                     "type": "integer"
-                },
-                "status": {
-                    "type": "string"
                 }
+                
             }
         }
     }
